fixed card width on mobile

--- a/src/views/Plutus/plutus.scss
+++ b/src/views/Plutus/plutus.scss
@@ -8,6 +8,10 @@
     font-weight: 600 !important;
   }
 
+  .ohm-card-container {
+    width: 100%;
+  }
+
   .ohm-logo-bg {
     margin-left: 0;
     border-radius: 20px;
